--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -67,8 +67,9 @@
     width: 90%
   h2.section-title__heading
     font-size: 1.85rem
+    margin-bottom: 1.4rem
   .section-title__image
-    margin-bottom: 2rem
+    margin-bottom: 3.5rem
   .title
     margin-top: 3px
     font-size: 23px
@@ -89,13 +90,16 @@
     &__section-title
       color: $light
     &__subtitle
-      max-width: 347px
-      &--mobile
-        font-size: 1.25rem
-        max-width: 25.6rem
+      max-width: 25rem
+      font-size: 1.25rem
+      font-style: normal
+      font-weight: normal
+      line-height: 135.84%
+
   .card
     &__text
-      margin-top: -11.5rem
+      max-width: 22.5rem
+      margin-top: -12rem
       margin-left: 0
       padding: 1.5rem 2.9rem
     &__design
