--- a/src/css/style.css
+++ b/src/css/style.css
@@ -663,8 +663,8 @@ img {
 
 .design__pricetag {
   position: absolute;
-  left: 0;
-  bottom: -1.79rem;
+  left: -0.5rem;
+  bottom: -1.5rem;
   font-size: 1.29rem;
   font-family: 'Yeseva One', cursive;
   text-transform: uppercase;
