--- a/src/sass/templates/_design.sass
+++ b/src/sass/templates/_design.sass
@@ -3,8 +3,8 @@
     margin-bottom: 2.85rem
   &__pricetag
     position: absolute
-    left: 0
-    bottom: -1.79rem
+    left: -0.5rem
+    bottom: -1.5rem
     font-size: 1.29rem
     font-family: 'Yeseva One', cursive
     text-transform: uppercase
