--- a/src/css/style.css
+++ b/src/css/style.css
@@ -663,14 +663,14 @@ img {
 
 .design__pricetag {
   position: absolute;
-  left: -0.5rem;
+  left: 0rem;
   bottom: -1.5rem;
   font-size: 1.29rem;
   font-family: 'Yeseva One', cursive;
   text-transform: uppercase;
   background-color: #E3B873;
   color: #ffffff;
-  padding: 1.1rem 3.7rem; }
+  padding: 1.3rem 5.3rem 1.3rem 2.7rem; }
 
 .design__subtitle {
   font-family: "Futura Book", sans-serif;
