--- a/src/sass/templates/_design.sass
+++ b/src/sass/templates/_design.sass
@@ -3,14 +3,14 @@
     margin-bottom: 2.85rem
   &__pricetag
     position: absolute
-    left: -0.5rem
+    left: 0rem
     bottom: -1.5rem
     font-size: 1.29rem
     font-family: 'Yeseva One', cursive
     text-transform: uppercase
     background-color: $primary
     color: $light
-    padding: 1.1rem 3.7rem
+    padding: 1.3rem 5.3rem 1.3rem 2.7rem
 
   &__subtitle
     font-family: "Futura Book", sans-serif
