--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -95,6 +95,10 @@
       font-style: normal
       font-weight: normal
       line-height: 135.84%
+    &__pricetag
+      bottom: -1.75rem
+      padding: 1rem 4rem 1rem 3.5rem
+
 
   .card
     &__text
