--- a/src/sass/templates/_modal.sass
+++ b/src/sass/templates/_modal.sass
@@ -18,10 +18,11 @@
     visibility: visible
   &__dialog
     position: relative
-    max-width: 36.36rem
+    max-width: 36.142rem
+    max-height: 36.357rem
     background: $dark
-    padding: 2.357rem 3.5rem 1.928rem
-    background: $dark url('../img/bg-lines.svg') no-repeat center
+    padding: 2.357rem 3.5rem 1.928rem 3.5rem
+    background: $dark url('../img/bg-lines.png') no-repeat center  
     color: $light
   &__close
     position: absolute
@@ -48,6 +49,9 @@
       margin-bottom: 1rem
   &__policy
     margin-bottom: 2.7rem
+  .policy__label
+    font-size: 1.142rem
+      
   &__button
     align-self: flex-end
-    min-width: 15.2rem // своебятина 
+    padding: 1.25rem 3.2rem 1.25rem 3.2rem
