--- a/src/sass/_settings.sass
+++ b/src/sass/_settings.sass
@@ -45,5 +45,33 @@ img
         background-color: $primary
         margin: 0 10px
 
+.scroll-up
+  display: none
+  position: fixed
+  right: 10px
+  bottom: 10px
+  cursor: pointer
+  font-size: 150%
+  width: 50px
+  height: 50px
+  border: none
+  background-color: transparent
+  -webkit-animation: 3s linear 1s
+  animation: 3s linear 1s
+  opacity: 0.5
+  transition: 0.2s
+  .scroll-up::before 
+    content: ''
+    position: absolute
+    left: 0
+    top: 0
+    width: 100%
+    height: 100%
+    border: 3px solid #E3B873
+    border-radius: 50%
+    background: url(../img/arrow-up.svg) no-repeat center/50%
+  .scroll-up:hover
+    opacity: 1
+
           
 
