--- a/src/sass/templates/_hero.sass
+++ b/src/sass/templates/_hero.sass
@@ -16,6 +16,15 @@
     width: 100%
     height: 100%
     background-color: rgba($dark, 0.7)
+  &::after
+    content: ''
+    position: absolute
+    bottom: 0 
+    left: 0
+    right: 0
+    width: 100%
+    height: 3.46rem
+    background-color: $dark
 
   &__content
     position: relative
@@ -50,6 +59,7 @@
 
   &__scroll-down
     position: absolute
+    z-index: 3
     display: flex
     justify-content: center
     align-items: center
