--- a/src/sass/templates/_projects.sass
+++ b/src/sass/templates/_projects.sass
@@ -1,7 +1,17 @@
+.project
+  &--title
+    font-size: 1.92rem
+    line-height: 2.64rem
+  &--image
+    max-width: 100%
+  
 .swiper
   &-slide
     display: flex
     flex-wrap: wrap
+    &__value
+      font-size: 1.07rem
+      line-height: 1.42rem
     &__text
       flex-basis: 50%
       margin-bottom: 2.42rem
@@ -9,6 +19,7 @@
     &__heading
       font-family: 'Yeseva One', cursive
       font-size: 1.285rem
+      font-weight: normal
       line-height: 1.78rem
       color: $primary
       text-transform: uppercase
