--- a/src/sass/_settings.sass
+++ b/src/sass/_settings.sass
@@ -33,11 +33,12 @@ img
       text-align: left
     &__heading
       font-family: 'Yeseva One', cursive
-      font-size: 1.42rem
+      font-size: 1.92rem
+      font-style: normal
       font-weight: normal
       text-transform: uppercase
-      margin-bottom: 13px
-      line-height: 138%
+      line-height: 2.64rem
+      letter-spacing: -0.07em
       &--primary
         color: $primary  
     &__word
@@ -45,7 +46,7 @@ img
       align-items: center
       &::after
         content: ''
-        margin-left: 2rem
+        margin-left: 2.6rem
         width: 91px
         height: 2px
         background-color: $primary
