--- a/src/sass/_grid.sass
+++ b/src/sass/_grid.sass
@@ -11,6 +11,15 @@
 .col
   &-30
     flex-basis: 30%
+  &-40
+    width: 40%
+  &-44
+    width: 44%
+    margin-bottom: 3.33rem
   &-50
     width: 50%
+  &-56
+    width: 55%
+  &-60
+    width: 70%
   
