add control section beta

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -360,15 +360,15 @@ template {
   font-size: 1.285rem;
   color: #ffffff;
   padding: 0.5rem 0; }
-  .input::-webkit-input-placeholder {
+  .input--light::-webkit-input-placeholder {
     color: #ffffff; }
-  .input::-moz-placeholder {
+  .input--light::-moz-placeholder {
     color: #ffffff; }
-  .input:-ms-input-placeholder {
+  .input--light:-ms-input-placeholder {
     color: #ffffff; }
-  .input::-ms-input-placeholder {
+  .input--light::-ms-input-placeholder {
     color: #ffffff; }
-  .input::placeholder {
+  .input--light::placeholder {
     color: #ffffff; }
 
 .policy__checkbox {
@@ -450,6 +450,8 @@ img {
     text-align: center; }
     .section-title--left {
       text-align: left; }
+    .section-title--light {
+      color: #ffffff; }
     .section-title__heading {
       font-family: 'Yeseva One', cursive;
       font-size: 1.92rem;
@@ -692,6 +694,77 @@ img {
   .title--primary {
     color: #E3B873; }
 
+.control__section-title {
+  margin-top: -30rem;
+  margin-bottom: 2.214rem; }
+
+.control-title__heading {
+  font-size: 1.43rem;
+  line-height: 2rem;
+  letter-spacing: normal; }
+
+.control__video {
+  position: relative;
+  display: flex;
+  margin: auto;
+  margin-bottom: 4.3rem;
+  max-width: 58.357rem;
+  min-height: 31rem;
+  background: #131313 url("../img/control/video-mask.jpg") center no-repeat;
+  box-shadow: 0px 20px 50px rgba(0, 0, 0, 0.15); }
+  .control__video::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8); }
+
+.control__text {
+  max-width: 40.785rem;
+  margin: auto;
+  margin-bottom: 4.3rem;
+  text-align: center;
+  font-size: 1.428rem;
+  line-height: 2.42rem;
+  letter-spacing: 0.009rem; }
+  .control__text::before {
+    content: '';
+    display: block;
+    margin: auto;
+    margin-bottom: 1.8rem;
+    width: 55px;
+    height: 2px;
+    background-color: #E3B873;
+    border-radius: 30px; }
+
+.control__form {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  max-width: 55rem;
+  margin: auto; }
+
+.control__label {
+  margin-bottom: -2px; }
+
+.control__button {
+  padding: 1.2857rem 4.785rem; }
+
+.control__input-group {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 30%; }
+
+.control__policy {
+  flex-basis: 100%;
+  margin-top: 1rem; }
+  .control__policy-label {
+    justify-content: center; }
+
+.video__play {
+  position: relative;
+  margin: auto; }
+
 .types__section-title {
   margin-bottom: 2rem; }
 
@@ -822,9 +895,11 @@ img {
     align-self: flex-end;
     padding: 1.25rem 3.2rem 1.25rem 3.2rem; }
 
-.project--image {
-  max-width: 100%;
-  margin-top: 1.6rem; }
+.projects {
+  padding-bottom: 30rem; }
+  .projects--image {
+    max-width: 100%;
+    margin-top: 1.6rem; }
 
 .swiper-nav-buttons {
   margin-top: 6.5rem; }
@@ -945,7 +1020,12 @@ img {
     color: #ffffff;
     margin-right: 0rem; }
   .contacts__button {
-    display: none; } }
+    display: none; }
+  .control__policy-label {
+    margin-top: -8.5rem; }
+  .control__input-group {
+    flex-basis: 100%;
+    margin-bottom: 5.25rem; } }
 
 @media screen and (max-width: 500px) {
   .container {
@@ -1012,7 +1092,10 @@ img {
   .col-44 {
     margin-bottom: 0; }
   .swiper-container-horizontal > .swiper-pagination-bullets {
-    bottom: 34px; } }
+    bottom: 34px; }
+  .control__button {
+    width: 28.3rem;
+    height: 4.25rem; } }
 
 @media screen and (max-height: 530px) {
   .hero__scroll-down {
