--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -82,6 +82,13 @@
       margin-right: 0rem
     &__button
       display: none
+  .control
+    &__policy
+      &-label
+        margin-top: -8.5rem
+    &__input-group
+      flex-basis: 100%
+      margin-bottom: 5.25rem
 
 @media screen and ( max-width: 500px )
   .container
@@ -160,6 +167,10 @@
     margin-bottom: 0
   .swiper-container-horizontal>.swiper-pagination-bullets
     bottom: 34px
+  .control
+    &__button
+      width: 28.3rem
+      height: 4.25rem
 @media screen and ( max-height: 530px )
   .hero
     &__scroll-down
