--- a/src/sass/_settings.sass
+++ b/src/sass/_settings.sass
@@ -28,9 +28,10 @@ img
       margin: 0 10px
   &-title
     text-align: center
-    // line-height: 2rem
     &--left
       text-align: left
+    &--light
+      color: $light
     &__heading
       font-family: 'Yeseva One', cursive
       font-size: 1.92rem
