add mobile version of section control

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -708,7 +708,7 @@ img {
   display: flex;
   margin: auto;
   margin-bottom: 4.3rem;
-  max-width: 58.357rem;
+  max-width: 58.4rem;
   min-height: 31rem;
   background: #131313 url("../img/control/video-mask.jpg") center no-repeat;
   box-shadow: 0px 20px 50px rgba(0, 0, 0, 0.15); }
@@ -750,6 +750,9 @@ img {
 .control__button {
   padding: 1.2857rem 4.785rem; }
 
+.control__input {
+  color: #131313; }
+
 .control__input-group {
   display: flex;
   flex-direction: column;
@@ -761,7 +764,7 @@ img {
   .control__policy-label {
     justify-content: center; }
 
-.video__play {
+.control__video--play {
   position: relative;
   margin: auto; }
 
@@ -1006,7 +1009,9 @@ img {
   .hero__scroll-down {
     display: none; }
   .hero__content {
-    margin-left: 0rem; } }
+    margin-left: 0rem; }
+  .scroll-up {
+    display: none; } }
 
 @media screen and (max-width: 576px) {
   .hero__text {
@@ -1021,11 +1026,17 @@ img {
     margin-right: 0rem; }
   .contacts__button {
     display: none; }
-  .control__policy-label {
-    margin-top: -8.5rem; }
+  .control__button {
+    order: 1;
+    width: 100%;
+    height: 4.25rem; }
   .control__input-group {
     flex-basis: 100%;
-    margin-bottom: 5.25rem; } }
+    margin-bottom: 5.25rem; }
+    .control__input-group--phone {
+      margin-bottom: 0.5rem; }
+  .control__policy-label {
+    margin-bottom: 5rem; } }
 
 @media screen and (max-width: 500px) {
   .container {
@@ -1035,6 +1046,12 @@ img {
     margin-bottom: 1.4rem; }
   .section-title__image {
     margin-bottom: 3.5rem; }
+  .section-title__text {
+    max-width: 24.6rem;
+    line-height: 158.48%;
+    margin-bottom: 1.4rem; }
+  .section-title__word::after {
+    display: none; }
   .title {
     margin-top: 3px;
     font-size: 23px;
@@ -1073,12 +1090,6 @@ img {
     padding: 1.5rem 2.9rem; }
   .types__card {
     margin-bottom: 6.5rem; }
-  .section-title__text {
-    max-width: 24.6rem;
-    line-height: 158.48%;
-    margin-bottom: 1.4rem; }
-  .section-title__word::after {
-    display: none; }
   .project--title {
     margin-bottom: 2.05rem; }
   .project--image {
@@ -1093,9 +1104,43 @@ img {
     margin-bottom: 0; }
   .swiper-container-horizontal > .swiper-pagination-bullets {
     bottom: 34px; }
+  .control--dark {
+    background-color: #131313;
+    padding-bottom: 0rem; }
+  .control-title__heading {
+    font-size: 1.83rem;
+    font-style: normal;
+    font-weight: normal;
+    line-height: 138.6%;
+    letter-spacing: 0; }
+  .control__text {
+    color: #ffffff;
+    font-size: 1.166rem;
+    line-height: 169.8%;
+    margin-bottom: 3rem; }
+    .control__text::before {
+      margin-bottom: 1.2rem; }
+  .control__input {
+    font-size: 1.5rem; }
+    .control__input-group--phone {
+      margin-bottom: 0; }
+  .control__label {
+    color: #959595; }
   .control__button {
-    width: 28.3rem;
-    height: 4.25rem; } }
+    width: 100%;
+    height: 4.25rem;
+    margin-bottom: -2rem; }
+  .control__policy-label {
+    color: #ffffff;
+    font-size: 1.33rem;
+    justify-content: left;
+    margin-top: 0; }
+  .control__video {
+    min-height: 17.25rem;
+    background-size: cover;
+    margin-bottom: 2.3rem; }
+    .control__video--play {
+      max-height: 63px; } }
 
 @media screen and (max-height: 530px) {
   .hero__scroll-down {
