--- a/src/sass/templates/_control.sass
+++ b/src/sass/templates/_control.sass
@@ -11,7 +11,7 @@
     display: flex
     margin: auto
     margin-bottom: 4.3rem
-    max-width: 58.357rem
+    max-width: 58.4rem
     min-height: 31rem
     background: $dark url('../img/control/video-mask.jpg') center no-repeat
     box-shadow: 0px 20px 50px rgba(0, 0, 0, 0.15)
@@ -48,6 +48,8 @@
     margin-bottom: -2px
   &__button
     padding: 1.2857rem 4.785rem
+  &__input
+    color: $dark
   &__input-group
     display: flex
     flex-direction: column
@@ -57,9 +59,8 @@
     margin-top: 1rem
     &-label
       justify-content: center
+  &__video
+    &--play
+      position: relative
+      margin: auto
 
-
-.video
-  &__play
-    position: relative
-    margin: auto
