--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -17,7 +17,8 @@
     box-shadow: 0rem 0.35rem 1.07rem rgba($primary, 0.3)
     transition: box-shadow 0.3s
     &:hover
-      border: 0.07rem solid $light
+      color: #E3B873
+      border: 0.07rem solid $primary
       box-shadow: 0rem 0.35rem 1.07rem rgba($light, 0.2)
       background-color: rgba($light, 0.2)
 
