--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -195,6 +195,8 @@
         margin-bottom: 1.2rem
     &__input
       font-size: 1.5rem
+      &::placeholder
+        color: $light
       &-group--phone
         margin-bottom: 0
     &__label
@@ -203,6 +205,7 @@
       width: 100%
       height: 4.25rem
       margin-bottom: -2rem
+      font-size: 1.25rem    
     &__policy-label
       color: $light
       font-size: 1.33rem
