work wшер footer

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -380,7 +380,8 @@ template {
 
 .policy__label {
   display: flex;
-  align-items: center; }
+  align-items: center;
+  font-size: 1.142rem; }
   .policy__label::before {
     content: '';
     width: 18px;
@@ -389,6 +390,8 @@ template {
     border-radius: 1px;
     cursor: pointer;
     margin-right: 0.64rem; }
+  .policy__label--center {
+    justify-content: center; }
 
 .container {
   width: 85%;
@@ -700,7 +703,7 @@ img {
   margin-bottom: 2.214rem; }
 
 .control-title__heading {
-  font-size: 1.43rem;
+  font-size: 1.6rem;
   line-height: 2rem;
   letter-spacing: normal; }
 
@@ -725,14 +728,14 @@ img {
   margin: auto;
   margin-bottom: 4.3rem;
   text-align: center;
-  font-size: 1.428rem;
+  font-size: 1.43rem;
   line-height: 2.42rem;
   letter-spacing: 0.009rem; }
   .control__text::before {
     content: '';
     display: block;
     margin: auto;
-    margin-bottom: 1.8rem;
+    margin-bottom: 2.5rem;
     width: 55px;
     height: 2px;
     background-color: #E3B873;
@@ -763,7 +766,8 @@ img {
   flex-basis: 100%;
   margin-top: 1rem; }
   .control__policy-label {
-    justify-content: center; }
+    justify-content: center;
+    font-size: 1.43rem; }
 
 .control__video--play {
   position: relative;
@@ -808,31 +812,31 @@ img {
   color: #ffffff;
   padding: 1rem 2.7rem; }
 
-.design__section-title {
-  margin-bottom: 2.85rem; }
-
-.design__pricetag {
-  position: absolute;
-  left: 0rem;
-  bottom: -1.5rem;
-  font-size: 1.29rem;
-  font-family: 'Yeseva One', cursive;
-  text-transform: uppercase;
-  background-color: #E3B873;
-  color: #ffffff;
-  padding: 1.3rem 5.3rem 1.3rem 2.7rem; }
-
-.design__subtitle {
-  font-family: "Futura Book", sans-serif;
-  font-size: 1.43rem;
-  line-height: 1.93rem;
-  font-style: normal;
-  font-weight: normal;
-  margin-top: 1.71rem;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 53rem;
-  text-transform: none; }
+.design {
+  padding-bottom: 30rem; }
+  .design__section-title {
+    margin-bottom: 2.85rem; }
+  .design__pricetag {
+    position: absolute;
+    left: 0rem;
+    bottom: -1.5rem;
+    font-size: 1.29rem;
+    font-family: 'Yeseva One', cursive;
+    text-transform: uppercase;
+    background-color: #E3B873;
+    color: #ffffff;
+    padding: 1.3rem 5.3rem 1.3rem 2.7rem; }
+  .design__subtitle {
+    font-family: "Futura Book", sans-serif;
+    font-size: 1.43rem;
+    line-height: 1.93rem;
+    font-style: normal;
+    font-weight: normal;
+    margin-top: 1.71rem;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 53rem;
+    text-transform: none; }
 
 .card__design {
   position: relative;
@@ -842,6 +846,53 @@ img {
   padding: 1.79rem 2.14rem;
   background-color: #fff;
   box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03); }
+
+.footer {
+  background: #131313 url("../img/footer/footer-bg.jpg") center no-repeat;
+  background-size: cover;
+  padding-top: 3rem; }
+  .footer__wrap {
+    background-color: #181818;
+    max-width: 63.07rem;
+    margin: 0 auto;
+    margin-top: -20rem;
+    margin-bottom: 3.714rem;
+    padding: 2.5rem; }
+  .footer__title {
+    text-transform: uppercase;
+    font-family: 'Yeseva One', cursive;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 1.43rem;
+    line-height: 2rem;
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 3.214rem; }
+  .footer__form {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    max-width: 37.142rem;
+    margin: 0 auto; }
+  .footer__input {
+    padding-top: 0.3rem; }
+    .footer__input-group {
+      display: flex;
+      flex-direction: column;
+      flex-basis: 45%;
+      margin-bottom: 3.2rem; }
+      .footer__input-group--full-width {
+        flex-basis: 100%;
+        margin-bottom: 2rem; }
+  .footer__policy {
+    flex-basis: 100%;
+    margin-bottom: 3.5rem; }
+  .footer__button {
+    padding: 1.3rem 4.5rem;
+    margin: 0 auto; }
+  .footer__menu {
+    background-color: #131313;
+    padding: 4.285rem 0; }
 
 .modal {
   opacity: 0;
@@ -1012,7 +1063,11 @@ img {
   .hero__content {
     margin-left: 0rem; }
   .scroll-up {
-    display: none; } }
+    display: none; }
+  .footer__input-group {
+    flex-basis: 100%; }
+  .footer__button {
+    width: 100%; } }
 
 @media screen and (max-width: 576px) {
   .hero__text {
@@ -1067,7 +1122,8 @@ img {
   .contacts__phone {
     text-decoration: none; }
   .design {
-    background-color: #131313; }
+    background-color: #131313;
+    padding: 0; }
     .design__section-title {
       color: #ffffff; }
     .design__subtitle {
@@ -1152,7 +1208,25 @@ img {
     background-size: cover;
     margin-bottom: 2.3rem; }
     .control__video--play {
-      max-height: 63px; } }
+      max-height: 63px; }
+  .footer {
+    background: #131313; }
+    .footer__wrap {
+      margin-top: 0;
+      background-color: #131313; }
+    .footer__title {
+      font-size: 1.7rem;
+      margin-bottom: 4.5rem; }
+    .footer__input {
+      font-size: 1.5rem; }
+      .footer__input-group {
+        margin-bottom: 5.35rem; }
+        .footer__input-group--full-width {
+          margin-bottom: 0.5rem; }
+    .footer__policy {
+      margin-bottom: 6rem; }
+  .policy__label--left {
+    justify-content: left; } }
 
 @media screen and (max-height: 530px) {
   .hero__scroll-down {
