--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -57,6 +57,7 @@
   &__label
     display: flex
     align-items: center
+    font-size: 1.142rem
     &::before
      content: ''
      width: 18px
@@ -65,5 +66,7 @@
      border-radius: 1px
      cursor: pointer  
      margin-right: 0.64rem
+    &--center
+      justify-content: center
   
   
