fixed modal in footer

--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -226,26 +226,32 @@
         max-height: 63px
   .footer
     background: $dark
-    &__container
     &__wrap
       margin-top: 0
+      padding: 0
       background-color: $dark
     &__title
       font-size: 1.7rem
-      margin-bottom: 4.5rem
+      margin-bottom: 4.2rem
     &__input
       font-size: 1.5rem
       &-group
-        margin-bottom: 5.35rem
+        margin-bottom: 4.9rem
         &--full-width
           margin-bottom: 0.5rem
+    &__label
+      font-size: 1.25rem
+      line-height: 1.666rem
     &__policy
-      margin-bottom: 6rem
+      margin-bottom: 5.6rem
     &__button
+      font-size: 1.25rem
+      padding: 1.55rem 0
   .policy
     &__label
       &--left
         justify-content: left
+        font-size: 1.333rem
       
 @media screen and ( max-height: 530px )
   .hero
