--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1213,20 +1213,28 @@ img {
     background: #131313; }
     .footer__wrap {
       margin-top: 0;
+      padding: 0;
       background-color: #131313; }
     .footer__title {
       font-size: 1.7rem;
-      margin-bottom: 4.5rem; }
+      margin-bottom: 4.2rem; }
     .footer__input {
       font-size: 1.5rem; }
       .footer__input-group {
-        margin-bottom: 5.35rem; }
+        margin-bottom: 4.9rem; }
         .footer__input-group--full-width {
           margin-bottom: 0.5rem; }
+    .footer__label {
+      font-size: 1.25rem;
+      line-height: 1.666rem; }
     .footer__policy {
-      margin-bottom: 6rem; }
+      margin-bottom: 5.6rem; }
+    .footer__button {
+      font-size: 1.25rem;
+      padding: 1.55rem 0; }
   .policy__label--left {
-    justify-content: left; } }
+    justify-content: left;
+    font-size: 1.333rem; } }
 
 @media screen and (max-height: 530px) {
   .hero__scroll-down {
